Upgrade jetty